--- a/code/ipython_test/ReLU/conv_relu.ipynb
+++ b/code/ipython_test/ReLU/conv_relu.ipynb
@@ -167,7 +167,7 @@
        "CUyZP+9YzefQGZ+3JEmSJEmSJEmSJEmSJEmSJEnp/h/MKiEw6v/gkQAAAABJRU5ErkJggg==\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x7f75c9e1e8d0>"
+       "<matplotlib.figure.Figure at 0x7f5d616d1990>"
       ]
      },
      "metadata": {},
@@ -231,13 +231,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "scale:  21.6152236036\n",
-      "scale:  9.20429903041\n",
-      "scale:  8.07720833378\n",
-      "scale:  12.4790885513\n",
-      "60.2973149785\n",
-      "scale:  3.24019815532\n",
-      "65.7951232584\n"
+      "scale:  19.5195085411\n",
+      "scale:  10.208631392\n",
+      "scale:  7.36131464507\n",
+      "0.0736633068326\n",
+      "scale:  14.1303782321\n",
+      "49.392420307\n",
+      "scale:  2.83610781963\n",
+      "50.0\n"
      ]
     }
    ],
@@ -265,6 +266,52 @@
     "result_cnn = np.argmax(r[-1][0], axis=1)\n",
     "label = ty[:num_train]\n",
     "print (result_snn == label).astype(int).sum(), (result_cnn == label).astype(int).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  58.18363753,  127.94644461,   41.32687471,   46.72042999,\n",
+       "         57.58084911,  147.04476062,   42.02611339,   59.14325466,\n",
+       "         78.19239618,   41.70852777,   73.13256442,  103.78833279,\n",
+       "         80.79783172,   98.99843797,  103.31807647,   96.89890185,\n",
+       "         98.78612184,   70.02473523,   12.11962647,   40.27220343,\n",
+       "         51.44871457,   91.77814779,  113.41431931,   42.84016324,\n",
+       "        107.40137932,   53.216516  ,   63.11385834,   94.91976045,\n",
+       "         43.00272458,   54.42091261,   95.33449407,   77.20088552,\n",
+       "        105.0442787 ,   32.59661032,   59.61195095,   37.90182617,\n",
+       "         61.42050617,   92.91497263,   98.48809498,   54.64224115,\n",
+       "         85.27115362,   27.41528054,   41.04251575,   21.57988057,\n",
+       "         71.31139429,   50.40956093,   99.4355336 ,   90.13073924,\n",
+       "        101.40467193,  175.87458228,   78.17711273,   33.43251801,\n",
+       "         79.6879155 ,   68.19290903,   93.810369  ,  115.19198919,\n",
+       "         74.19024595,   41.60713746,   80.83291336,   86.02007417,\n",
+       "        101.71353575,  104.17914436,  207.00944133,   53.42498614,\n",
+       "        123.26278327,   29.77194221,  178.68592223,  118.13127345,\n",
+       "         77.693611  ,   64.82887167,   71.69270915,  122.63706103,\n",
+       "         80.89067071,   57.44256396,   50.00340684,   65.15270353,\n",
+       "        118.45252433,   99.32335892,  122.60795339,    0.        ,\n",
+       "        101.29202034,   62.47568621,   68.86398478,   51.88529766,\n",
+       "         96.77970862,   36.57452377,   45.29789501,   20.86943194,\n",
+       "         94.35476371,  100.84571626,   94.54480634,   88.43623367,\n",
+       "         58.32921421,   40.68191299,   61.69497333,   65.7839448 ,\n",
+       "         47.65840786,   68.02785595,   99.30331776,  109.29856725])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.max(a,axis=1)"
    ]
   },
   {
