--- a/code/ipython_test/ReLU/spiking_dbn.ipynb
+++ b/code/ipython_test/ReLU/spiking_dbn.ipynb
@@ -8,6 +8,7 @@
    },
    "outputs": [],
    "source": [
+    "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pyNN.nest as p\n",
@@ -80,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -129,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -162,77 +163,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def run_cnn_test(w_list, cell_para, spike_source_data):\n",
-    "    pop_list = []\n",
-    "    p.setup(timestep=1.0, min_delay=1.0, max_delay=3.0)\n",
-    "    #input poisson layer\n",
-    "    input_size = 28\n",
-    "    pop_in = p.Population(input_size, p.SpikeSourceArray, {'spike_times' : []})\n",
-    "    for j in range(input_size):\n",
-    "        pop_in[j].spike_times = spike_source_data[j]\n",
-    "    pop_list.append(pop_in)\n",
-    "    \n",
-    "    for w in w_list:        \n",
-    "        pos_w = np.copy(w)\n",
-    "        pos_w[pos_w < 0] = 0\n",
-    "        neg_w = np.copy(w)\n",
-    "        neg_w[neg_w > 0] = 0\n",
-    "        \n",
-    "        output_size = w.shape[1]\n",
-    "        pop_out = p.Population(output_size, p.IF_curr_exp, cell_para)\n",
-    "        p.Projection(pop_in, pop_out, p.AllToAllConnector(weights = pos_w), target='excitatory')\n",
-    "        p.Projection(pop_in, pop_out, p.AllToAllConnector(weights = neg_w), target='inhibitory')\n",
-    "        pop_list.append(pop_out)\n",
-    "        pop_in = pop_out\n",
+    "import scipy.io as sio\n",
+    "tmp_x = sio.loadmat('mnist.mat')['test_x']\n",
+    "tmp_x = np.transpose(tmp_x, (2, 0, 1))\n",
+    "tmp_x = np.reshape(tmp_x, (tmp_x.shape[0], 28*28), order='F' )\n",
     "\n",
-    "    pop_out.record()\n",
-    "    run_time = np.ceil(np.max(spike_source_data)[0]/1000.)*1000\n",
-    "    p.run(run_time)\n",
-    "    spikes = pop_out.getSpikes(compatible_output=True)\n",
-    "    p.end()\n",
-    "    return spikes"
+    "tmp_y = sio.loadmat('mnist.mat')['test_y']\n",
+    "tmp_y = np.argmax(tmp_y, axis=0)\n",
+    "offset = 0\n",
+    "dur_test = 10000\n",
+    "silence = 200\n",
+    "num_test = 100\n",
+    "test = tmp_x[offset:(offset+num_test), :]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "scale:  18.6158395604\n",
-      "scale:  10.211737225\n",
-      "scale:  7.27692308695\n",
-      "scale:  14.3287809602\n",
-      "46.3339326908\n",
-      "scale:  2.70857821288\n",
-      "50.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "w_cnn, l_cnn = cnnu.readmat('cnn_relu.mat')#cnn609.mat softplus 3-5 train.\n",
     "#r = cnnu.test(w_cnn, l_cnn, test_x[:100,:], False)\n",
     "SUM_rate = 2000.\n",
     "tx = np.zeros((num_test, 784))\n",
     "for i in range(num_test):\n",
-    "    tx[i] = test_x[i]/sum(test_x[i])*SUM_rate\n",
-    "w_cnn, a = cnnu.scale_weight(w_cnn, l_cnn, tx[:100,:])"
+    "    tx[i] = test[i]/sum(test[i])*SUM_rate\n",
+    "#w_cnn, a = cnnu.scale_weight(w_cnn, l_cnn, tx[:num_test,:])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
@@ -242,8 +212,8 @@
     "                   'i_offset': 0.0,\n",
     "                   'tau_m': 20.0,\n",
     "                   'tau_refrac': 1.,\n",
-    "                   'tau_syn_E': 1.0,\n",
-    "                   'tau_syn_I': 1.0,\n",
+    "                   'tau_syn_E': 10.0,\n",
+    "                   'tau_syn_I': 10.0,\n",
     "                   'v_reset': -70.0,\n",
     "                   'v_rest': -65.0,\n",
     "                   'v_thresh': -50.0\n",
@@ -340,7 +310,7 @@
     "def init_inputlayer(input_size, data):\n",
     "    pop_list = []\n",
     "    pop = p.Population(input_size*input_size, p.SpikeSourceArray, {'spike_times' : []})\n",
-    "    spike_source_data = sr.gen_spike_source(data)\n",
+    "    spike_source_data = sr.gen_spike_source(data,dur_test = 10000)\n",
     "    for j in range(input_size*input_size):\n",
     "        pop[j].spike_times = spike_source_data[j]\n",
     "    pop_list.append(pop)\n",
@@ -349,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 45,
    "metadata": {
     "collapsed": true
    },
@@ -384,27 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import scipy.io as sio\n",
-    "tmp_x = sio.loadmat('mnist.mat')['test_x']\n",
-    "tmp_x = np.transpose(tmp_x, (2, 0, 1))\n",
-    "tmp_x = np.reshape(tmp_x, (tmp_x.shape[0], 28*28), order='F' )\n",
-    "\n",
-    "tmp_y = sio.loadmat('mnist.mat')['test_y']\n",
-    "tmp_y = np.argmax(tmp_y, axis=0)\n",
-    "num_test = 100\n",
-    "offset = 0\n",
-    "test = tmp_x[offset:(offset+num_test), :]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
@@ -424,21 +374,53 @@
    "source": [
     "p.setup(timestep=1.0, min_delay=1.0, max_delay=3.0)\n",
     "L = l_cnn\n",
+    "num_test = 100\n",
+    "random.seed(0)\n",
     "input_size = L[0][1]\n",
     "pops_list = []\n",
-    "pops_list.append(init_inputlayer(input_size, test))\n",
+    "pops_list.append(init_inputlayer(input_size, test[:num_test, :]))\n",
     "\n",
     "for l in range(5):\n",
     "    pops_list.append(construct_layer(pops_list[l], L[l+1][0], L[l+1][1], w_cnn[l]))\n",
-    "pops_list[5][0].record()\n",
+    "observe = pops_list[5][0]\n",
+    "inpop = pops_list[0][0]\n",
+    "observe.record()\n",
+    "inpop.record()\n",
     "p.run((dur_test+silence)*num_test)\n",
-    "spikes = pops_list[5][0].getSpikes(compatible_output=True)\n",
+    "spikes = observe.getSpikes(compatible_output=True)\n",
+    "spikein = inpop.getSpikes(compatible_output=True)\n",
     "p.end()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 50,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def plot_digit(img_raw, size=28, crange=(0.0, 40.)):\n",
+    "    #img_raw = np.uint8(img_raw)\n",
+    "    plt.figure(figsize=(5,5))\n",
+    "    im = plt.imshow(np.reshape(img_raw,(size,size)), cmap=cm.gray_r,interpolation='none', clim=crange)\n",
+    "    plt.colorbar(im, fraction=0.046, pad=0.04)\n",
+    "    plt.show()\n",
+    "def count_spikes(spikes, num_neuron):\n",
+    "    spike_count = []\n",
+    "    for i in range(num_neuron):\n",
+    "        index_i = np.where(spikes[:,0] == i)\n",
+    "        spike_train = spikes[index_i, 1]\n",
+    "        temp = sr.counter(spike_train, range(0, (dur_test+silence)*num_test,dur_test+silence), dur_test)\n",
+    "        spike_count.append(temp)\n",
+    "    spike_count = np.array(spike_count)/(dur_test / 1000.)\n",
+    "    spike_count = np.array(spike_count)\n",
+    "    return spike_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
    "metadata": {
     "collapsed": false
    },
@@ -447,7 +429,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "80\n"
+      "89\n"
      ]
     }
    ],
@@ -466,13 +448,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 55,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  42.2,  193.7,   37.3,   19.5,   54.6,   89.9,   53.3,   67.4,\n",
+       "        113.7,   26. ,   68.6,   89.9,   89.1,  109.7,  151.4,   91.9,\n",
+       "        127. ,   72.4,   47.1,   92.8,   33.3,   66.4,  134.8,   35.3,\n",
+       "        134.9,   13.6,   18.7,  102.4,   45.9,   26.7,  110.9,   81. ,\n",
+       "        114.1,   14.8,   42.3,   41.8,  111.5,  102.4,   98.3,   50.3,\n",
+       "        120. ,   27.6,   50.2,   10. ,   84.3,   43.5,   77.8,   67.6,\n",
+       "         38.4,  227. ,   75.2,   56.9,   81.1,   52.8,   73.2,  133.5,\n",
+       "         58.5,   48.6,  118.1,  150.5,  103.3,   71. ,  229.3,   61.6,\n",
+       "         86.2,   31.3,  181.8,  117.6,   35.3,   79.1,   42.9,  153.3,\n",
+       "        123.8,   46.6,   71.3,   74.3,  108.5,   69.3,  193.7,   22.4,\n",
+       "        101.1,   51.6,   72.3,   85.5,   67.9,   23.9,   45.4,    6.5,\n",
+       "        130.3,  147.8,   99.3,  102. ,   64. ,   28. ,   66.5,   82. ,\n",
+       "         87.1,  117. ,   57.1,   99.6])"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "sr.plot_spikes(spikes,'out')"
+    "np.max(spike_count, axis=0)"
    ]
   },
   {
